--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^137.0.1",
     "country-flag-icons": "^1.5.19",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "next": "15.3.4",
     "puppeteer": "^24.10.2",
+    "puppeteer-core": "^24.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
