--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,14 @@ services:
     name: cv-ats
     env: node
     plan: free
-    buildCommand: 'npm ci && npm run build'
+    buildCommand: 'mkdir -p /opt/render/.cache/puppeteer && npm ci && npx puppeteer browsers install chrome && npm run build'
     startCommand: 'npm start'
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PUPPETEER_SKIP_DOWNLOAD
+        value: 'false'
+      - key: PUPPETEER_PRODUCT
+        value: chrome
+      - key: PUPPETEER_CACHE_DIR
+        value: /opt/render/.cache/puppeteer
